<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">FaceppAndroidDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_detect">检测</string>
    <string name="btn_commit_picture">上传图片</string>
    <string name="btn_group_create">创建组</string>
    <string name="btn_group_delete">删除组</string>
    <string name="btn_group_edit">修改组</string>
    <string name="btn_person_create">创建用户</string>
    <string name="btn_person_delete">删除删除</string>
    <string name="btn_person_edit">修改用户</string>
    <string name="btn_face_create">创建用户</string>
    <string name="btn_face_delete">删除删除</string>
    <string name="btn_face_edit">修改用户</string>
    <string name="dialog_btn_positive">确定</string>
    <string name="dialog_btn_negative">取消</string>
    <string name="hint_loading">信息更新中...</string>
    <string name="hint_create">创建中...</string>
    <string name="hint_bind">Face信息保存中.</string>
    <string name="hint_action_success">操作成功.</string>
    <string name="hint_action_fail">操作失败.</string>
    <string name="hint_bind_success">Face信息保存成功.</string>
    <string name="hint_bind_Fail">Face信息保存失败.</string>
    <string name="hint_data_null">查询记录为空.</string>
    <string name="hint_data_error">返回数据异常.</string>
    <string name="hint_create_success">创建成功.</string>
    <string name="hint_create_error">创建失败.</string>
    <string name="hint_detect_noface">木有发现人脸。。.</string>
</resources>
