<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/name"
     android:layout_width="fill_parent" android:layout_height="wrap_content" />

    <include layout="@layout/component_listview"/>
    
	<LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	    <Button android:id="@+id/create" android:layout_width="0dp"
	        android:layout_height="wrap_content" android:text="@string/btn_person_create"
	        android:layout_weight="1"/>
	    <Button android:id="@+id/delete" android:layout_width="0dp"
	        android:layout_height="wrap_content" android:text="@string/btn_person_delete"
	        android:layout_weight="1" android:layout_marginLeft="5dp"/>
		<Button android:id="@+id/edit" android:layout_width="0dp"
	        android:layout_height="wrap_content" android:text="@string/btn_person_edit"
	        android:layout_weight="1" android:layout_marginLeft="5dp"/>	    
	</LinearLayout>
</LinearLayout>